[project]
name = "nyan-tcg-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Gea",email = "xchgeaxeax@mailbox.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  'pyexcel_ods',
  'pydantic'
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
