[project]
name = "nyan-tcg-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Gea",email = "xchgeaxeax@mailbox.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  'pyexcel_ods',
  'pydantic',
  "pillow (>=12.0.0,<13.0.0)",
  "tk (>=0.1.0,<0.2.0)",
  "pyexcel-xlsx (>=0.6.1,<0.7.0)"
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
